--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Archivo:500|Open+Sans:400,700" rel="stylesheet">
+
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -18,6 +21,7 @@
   
     <!-- FontAwesome Scripts -->
     <script src="https://kit.fontawesome.com/474e70496a.js" crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
@@ -72,7 +76,7 @@
                 <div class="row">
                     <h3>Programming and software skills</h3>
                     <div class="col-lg-6 col-md-6 my-auto">
-                        <p>Here are some of the skills that I leart through all this time and that I feel confident I can perform as well as improve.</p>
+                        <p>Here are some of the skills that I learnt through all this time and that I feel confident I can perform as well as improve.</p>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="progress">
@@ -134,7 +138,7 @@
                     <strong><a href="https://agora.xtec.cat/iesmila/" target="_blank" rel="noopener noreferrer">IES Milà i Fontanals</a> - Igualada</strong>
                 </p>
             </div>
-            <h5>Other studies and interests</h5>
+            <h3 class="section-title">Other studies and interests</h3>
             <div class="education-element">
                 <h6 class="education-title">The Complete 2022 Web Development Bootcamp</h6>
                 <a data-toggle="collapse" href="#edu-description-1"><i class="fas fa-chevron-down"></i></a>
