--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div>
                 <img class="profile-picture" src="images/profile2.png" alt="albert profile picture">
                 <h1 class="name ">Albert Mudarra Galobart</h1>
-                <h5 class="name-subtitle anim-typewriter">Informatics Engineering &nbsp; | &nbsp; Web Developer</h5>
+                <h5 class="">Informatics Engineering &nbsp; | &nbsp; Web Developer</h5>
             </div>
         </div>
     </section>
@@ -121,9 +121,9 @@
                 <h5 class="section-subtitle">Bachelor Degree in Informatics Engineering</h5>
                 <h6 class="section-subtitle">Specialization in Computation</h6>
                 <a data-toggle="collapse" href="#edu-description-0"><i class="fas fa-chevron-down btn-dropdown"></i></a>
-                <p>
-                    <em class="years">2017 - Current</em><br>
-                    <strong class="location-studies-work">Universitat Politècnica de Catalunya - Facultat d'Informàtica de Barcelona</strong>
+                <p class="years-location">
+                    <em>2017 - Currently</em><br>
+                    <strong>Universitat Politècnica de Catalunya - Facultat d'Informàtica de Barcelona</strong>
                 </p>
                 <p id="edu-description-0" class="collapse dropdown-description">
                     I started this degree in 2017 and had to work while studying. Currently I am at the final phase of this 
@@ -134,18 +134,18 @@
             </div>
             <div class="container-rounded-light">
                 <h5 class="section-subtitle">Higher Technician in Pulp and Paper Process Industries</h5>
-                <p>
-                    <em class="years">2015 - 2016</em><br>
-                    <strong class="location-studies-work"><a href="https://agora.xtec.cat/iesmila/" target="_blank" rel="noopener noreferrer">IES Milà i Fontanals</a> - Igualada</strong>
+                <p class="years-location">
+                    <em>2015 - 2016</em><br>
+                    <strong><a href="https://agora.xtec.cat/iesmila/" target="_blank" rel="noopener noreferrer">IES Milà i Fontanals</a> - Igualada</strong>
                 </p>
             </div>
             <h3 class="section-title">Other studies and interests</h3>
             <div class="container-rounded-light">
                 <h6 class="section-subtitle">The Complete 2022 Web Development Bootcamp</h6>
                 <a data-toggle="collapse" href="#edu-description-1"><i class="fas fa-chevron-down btn-dropdown"></i></a>
-                <p>
-                    <em class="years">Jan. 2022 - Feb. 2022</em><br>
-                    <strong class="location-studies-work">Online course at <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" target="_blank" rel="noopener noreferrer">Udemy</a></strong> 
+                <p class="years-location">
+                    <em>Jan. 2022 - Feb. 2022</em><br>
+                    <strong>Online course at <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" target="_blank" rel="noopener noreferrer">Udemy</a></strong> 
                 </p>
                 <p id="edu-description-1" class="collapse dropdown-description">
                     In this course I learnt about HTML, CSS, Javascript, Node, React, MongoDB and more to build projects.
@@ -154,9 +154,9 @@
             </div>
             <div class="container-rounded-light last-element">
                 <h6 class="section-subtitle">First Certificate in English (FCE)</h6>
-                <p>
-                    <em class="years">2014</em><br>
-                    <strong class="location-studies-work"><a href="https://academiaigualada.com/es/" target="_blank" rel="noopener noreferrer">Acadèmia Igualada</a></strong>
+                <p class="years-location">
+                    <em>2014</em><br>
+                    <strong><a href="https://academiaigualada.com/es/" target="_blank" rel="noopener noreferrer">Acadèmia Igualada</a></strong>
                 </p>
             </div>
                 
@@ -170,9 +170,9 @@
             <div class="container-rounded-dark">
                 <h5 class="section-subtitle">Workshop laborer</h5>
                 <a data-toggle="collapse" href="#work-description-0"><i class="fas fa-chevron-down btn-dropdown"></i></a>
-                <p>
-                    <em class="years">Jul. 2021 - Aug. 2021</em><br>
-                    <strong class="location-studies-work">Later Aplicaciones S.L. - Igualada</strong>
+                <p class="years-location">
+                    <em>Jul. 2021 - Aug. 2021</em><br>
+                    <strong>Later Aplicaciones S.L. - Igualada</strong>
                 </p>
                 <p id="work-description-0" class="collapse dropdown-description">
                     This was a job I had only for the summer of 2021 at a local wood workshop. My duties were to help the most experienced workers in anything they asked, so that the job got done faster.
@@ -181,9 +181,9 @@
             <div class="container-rounded-dark">
                 <h5 class="section-subtitle">Cashier</h5>
                 <a data-toggle="collapse" href="#work-description-1"><i class="fas fa-chevron-down btn-dropdown"></i></a>
-                <p>
-                    <em class="years">Jun. 2021</em><br>
-                    <strong class="location-studies-work"><a href="https://www.mercadona.es/" target="_blank" rel="noopener noreferrer">Mercadona</a> - Igualada</strong>
+                <p class="years-location">
+                    <em>Jun. 2021</em><br>
+                    <strong><a href="https://www.mercadona.es/" target="_blank" rel="noopener noreferrer">Mercadona</a> - Igualada</strong>
                 </p>
                 <p id="work-description-1" class="collapse dropdown-description">
                     I worked on the weekends at a local supermarket as a cashier and stocker.
@@ -192,9 +192,9 @@
             <div class="container-rounded-dark last-element">
                 <h5 class="section-subtitle">IT Technician and Web Developer</h5>
                 <a data-toggle="collapse" href="#work-description-2"><i class="fas fa-chevron-down btn-dropdown"></i></a>
-                <p>
-                    <em class="years">Aug. 2018 - Feb. 2020</em><br>
-                    <strong class="location-studies-work"> <a href="https://www.grupotodoplano.com/" target="_blank">Grupo Todoplano</a> - Barcelona</strong>
+                <p class="years-location">
+                    <em>Aug. 2018 - Feb. 2020</em><br>
+                    <strong> <a href="https://www.grupotodoplano.com/" target="_blank">Grupo Todoplano</a> - Barcelona</strong>
                 </p>
                 <div id="work-description-2" class="collapse dropdown-description">
                     <p>My most relevant work experience so far, where I worked at a mattress and rest company, that had 14 physical stores in Barcelona as well as a website, as an IT Technician and Web Developer. <br>
