--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   </ul>
                 </div>
               </nav>
-            <div>
+            <div class="inner-container">
                 <img class="profile-picture" src="images/profile2.png" alt="albert profile picture">
                 <h1 class="name ">Albert Mudarra Galobart</h1>
                 <h5 class="">Informatics Engineering &nbsp; | &nbsp; Web Developer</h5>
@@ -116,7 +116,9 @@
 
     <section id="education" class="container-transparent">
         <div class="container-fluid">
-            <h2 class="section-title">Education & Learning</h2>
+            <div class="inner-container">
+                <h2 class="section-title">Education & Learning</h2>
+            </div>
             <div class="container-rounded-light">
                 <h5 class="section-subtitle">Bachelor Degree in Informatics Engineering</h5>
                 <h6 class="section-subtitle">Specialization in Computation</h6>
@@ -139,7 +141,10 @@
                     <strong><a href="https://agora.xtec.cat/iesmila/" target="_blank" rel="noopener noreferrer">IES Milà i Fontanals</a> - Igualada</strong>
                 </p>
             </div>
-            <h3 class="section-title">Other studies and interests</h3>
+            <div class="inner-container">
+                <h3 class="section-title">Other studies and interests</h3>
+            </div>
+            
             <div class="container-rounded-light">
                 <h6 class="section-subtitle">The Complete 2022 Web Development Bootcamp</h6>
                 <a data-toggle="collapse" href="#edu-description-1"><i class="fas fa-chevron-down btn-dropdown"></i></a>
@@ -165,8 +170,10 @@
 
     <section id="experience" class="container-dark">
         <div class="container-fluid">
-            <h2 class="section-title">Work Experience</h2>
-            <p>These are some of the latest, most relevant work experiences that I've had.</p>
+            <div class="inner-container">
+                <h2 class="section-title">Work Experience</h2>
+                <p>These are some of the latest, most relevant work experiences that I've had.</p>
+            </div>
             <div class="container-rounded-dark">
                 <h5 class="section-subtitle">Workshop laborer</h5>
                 <a data-toggle="collapse" href="#work-description-0"><i class="fas fa-chevron-down btn-dropdown"></i></a>
