--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
                     <p>My most relevant work experience so far, where I worked at a mattress and rest company, that had 14 physical stores in Barcelona as well as a website, as an IT Technician and Web Developer. <br>
                         These are some of the tasks that I had to carry out:
                         <ul class="list-unstyled fa-ul task-list">
-                            <li>Maintenance and repairment of computer equipment.</li>
-                            <li>Company's network and server maintenance from the headquarters.</li>
-                            <li>Web development using Wordpress and Prestashop</li>
-                            <li>Support to the marketing and social media team.</li>
+                            <li class="task-element">Maintenance and repairment of computer equipment.</li>
+                            <li class="task-element">Company's network and server maintenance from the headquarters.</li>
+                            <li class="task-element">Web development using Wordpress and Prestashop</li>
+                            <li class="task-element">Support to the marketing and social media team.</li>
                         </ul>
                     </p>
                 </div>
