--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="inner-container">
                 <img class="profile-picture" src="images/profile2.png" alt="albert profile picture">
                 <h1 class="name ">Albert Mudarra Galobart</h1>
-                <h5 class="">Informatics Engineering &nbsp; | &nbsp; Web Developer</h5>
+                <h5 class="">Informatics Engineering Student</h5>
             </div>
         </div>
     </section>
@@ -173,6 +173,18 @@
             <div class="inner-container">
                 <h2 class="section-title">Work Experience</h2>
                 <p>These are some of the latest, most relevant work experiences that I've had.</p>
+            </div>
+            <div class="container-rounded-dark">
+                <h5 class="section-subtitle">Technological Product Seller</h5>
+                <a data-toggle="collapse" href="#work-description-0"><i class="fas fa-chevron-down btn-dropdown"></i></a>
+                <p class="years-location">
+                    <em>Feb. 2022 - Currently</em><br>
+                    <strong><a href="https://www.fnac.es/" target="_blank" rel="noopener noreferrer">FNAC</a> L'Illa - Barcelona</strong>
+                </p>
+                <p id="work-description-0" class="collapse dropdown-description">
+                    My job is to assist customers to get the product that fits their needs, these products being mostly laptops, monitors, smartphones, tablets and other accessories. 
+                    I have other duties such as taking care of the zone that I have been assigned by replenishing the products that we sell, or ordering them in case they are missplaced.
+                </p>
             </div>
             <div class="container-rounded-dark">
                 <h5 class="section-subtitle">Workshop laborer</h5>
